--- a/dropDownMenu/drobDownMenu.css
+++ b/dropDownMenu/drobDownMenu.css
@@ -1,4 +1,34 @@
+*{
+	box-sizing: border-box;
+	margin: 0px;
+	padding: 0px;
+}
+
 .Button{
 	padding: 10px;
 	border: 1px solid #000;
+	width: 250px;
+	position: relative;
+	cursor: pointer;
+	margin-left: 100px;
+	margin-top: 100px;
+}
+
+
+
+.Menu{
+	position: absolute;
+	right: -1px;
+	left: -1px;
+	height: 0px;
+	overflow-y: auto;
+
+}
+.Menu li{
+	list-style-type: none;
+}
+
+.Menu li:hover{
+	background: #56ccff;
+	color: #fff;
 }
