--- a/dropDownMenu/drobDownMenu.css
+++ b/dropDownMenu/drobDownMenu.css
@@ -14,6 +14,16 @@
 	margin-top: 100px;
 }
 
+.but{
+	padding: 10px;
+	border: 1px solid #000;
+	width: 250px;
+	position: relative;
+	cursor: pointer;
+	margin-left: 300px;
+	margin-top: 100px;
+}
+
 
 
 .Menu{
@@ -22,6 +32,9 @@
 	left: -1px;
 	height: 0px;
 	overflow-y: auto;
+	border-width:1px;
+	border-style: solid;
+	border-color: #000;
 
 }
 .Menu li{
